--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ thiserror = { version = "1" }
 tokio = { version = "1.35.0", features = ["full"] }
 rand = "0.7.3"
 threshold_crypto = "0.4.0"
+log = "0.4"
+serde = { version = "1.0.114", features = ["derive", "rc"] }
+serde_json = "1.0.57"
 
 [profile.release]
 lto = true
