--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,10 @@ tokio = { version = "1.35.0", features = ["full"] }
 rand = "0.7.3"
 threshold_crypto = "0.4.0"
 log = "0.4"
-serde = { version = "1.0.114", features = ["derive", "rc"] }
+serde = { version = "1.0.114", features = ["derive"] }
 serde_json = "1.0.57"
+serde_derive = "1.0.219"
+reqwest = { version = "0.12", features = ["json"] }
 
 [profile.release]
 lto = true
