--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ description = ""
 [dependencies]
 actix-web = "4"
 anyhow = { version = "1.0.65" }
+futures = "0.3"
 tokio = { version = "1.35.0", features = ["full"] }
 rand = "0.7.3"
 threshold_crypto = "0.4.0"
