--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ serde = { version = "1.0.114", features = ["derive"] }
 serde_json = "1.0.57"
 serde_derive = "1.0.219"
 reqwest = { version = "0.12", features = ["json"] }
+env_logger = "0.11"
+chrono = "0.4"
 
 [profile.release]
 lto = true
